# 3up3down

./: .clangd  .gitignore  CMakeLists.txt
.cache/clangd/index/: engine.cpp.A2F4E27FB393C8E0.idx  player.hpp.2D35070B089FDA69.idx  smoke.cpp.71F90C2CADC380CB.idx
baseball_stats/: pa_data.py  pa_model.py  pa_outcome_rates.json  requirements.txt  sim_rates.py
engine/: CMakeLists.txt  engine.cpp
engine/model/: player.hpp
engine/sim/: plate_appearence.cpp  plate_appearence.hpp
tests/: smoke.cpp
